<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="validation_code">Validation Code</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">Resend Code</string>
    <string name="system_email">a</string>
    <string name="system_email_password">a</string>
    <string name="your_secret_key">your secret key</string>
    <string name="your_api_key">your API-key</string>
    <string name="free">FREE</string>
    <string name="asset">ASSET</string>
    <string name="locked">LOCKED</string>
    <string name="your_asset">Your asset:</string>
    <string name="your_assets">Your assets:</string>
    <string name="three_dots">⋮</string>
    <string name="prices">Prices</string>
    <string name="assets_prices">Assets prices</string>
    <string name="account_info">Account info</string>
    <string name="price">PRICE</string>
    <string name="symbol">SYMBOL</string>
    <string name="price_">PRICE</string>
    <string name="assets_prices_">Assets prices</string>
</resources>